--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">Software Developer</h3>
-                    <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum. Amet dolor stet lorem diam dolor justo et dolor dolor dolor</p>
+                    <p>As a Back-end Developer, I have proven expertise in creating web applications, RESTful APIs, and working
+                    with databases. I am proficient in the PHP language and have over 5 years of experience working with it. I am
+                    also familiar with various frameworks such as Laravel, Symfony, as well vanilla PHP, and have experience using
+                    these tools to develop and improve API, and CLI applications written in PHP.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Mohammed Almurtada Sabr</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">6 Nov 1977</span></h6></div>
