--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                     <div class="typed-text d-none">Web Developer, Back End Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="doc/Mohamed_Almurtada_Resume_2023_06.pdf" class="btn btn-outline-light mr-5" target="_blank">View CV</a>
-                        <button type="button" class="btn-play" data-toggle="modal"
+                        <!-- <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
                             <span></span>
                         </button>
-                        <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Play Video</h5>
+                        <h5 class="font-weight-normal text-white m-0 ml-4 d-none d-sm-block">Play Video</h5> -->
                     </div>
                 </div>
             </div>
@@ -94,15 +94,14 @@
                     these tools to develop and improve API, and CLI applications written in PHP.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Mohammed Almurtada Sabr</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">6 Nov 1977</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Master</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">9 Years</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+011 238 45008</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">devmurtadaelahdi@gmail.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">BTN Jln 18, kuala lumpur, MY</span></h6></div>
                     </div>
-                    <a href="" class="btn btn-outline-primary mr-4">Hire Me</a>
-                    <a href="" class="btn btn-outline-primary">Learn More</a>
+                    <!-- <a href="" class="btn btn-outline-primary mr-4">Hire Me</a>
+                    <a href="" class="btn btn-outline-primary">Learn More</a> -->
                 </div>
             </div>
         </div>
@@ -143,7 +142,15 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Software Developer</h5>
                             <p class="mb-2"><strong>Sam media</strong> | <small>2015 - present</small></p>
-                            <p>Handling backend operation, api integration</p>
+                            <ul>
+                                <li>Handling backend operation, api integration</li>
+                                <li>Developing and maintaining the core application</li>
+                                <li>new features and reforming current abilities</li>
+                                <li>Tasks automation</li>
+                                <li>Work on our new platform with new infrastructure, base code, and, architecture to replace the old one .</li>
+                                <li><b>Technologies:</b> PHP, Python, Ruby on Rails, MySQL, Docker, Git, AWS, Redis, Rabbitmq, 
+                                    Grafana, Sentry, ElasticSearch</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -277,12 +284,12 @@
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/murtada-sabr-67b56276"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
             </div>
-            <div class="d-flex justify-content-center mb-3">
+            <!-- <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="#">Privacy</a>
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Terms</a>
@@ -290,7 +297,7 @@
                 <a class="text-white" href="#">FAQs</a>
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
-            </div>
+            </div> -->
             <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">devmurtadaelhadi</a>. All Rights Reserved.</p>
         </div>
     </div>
