--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Web Developer, Back End Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="doc/Mohamed_Almurtada_Resume_2023_06.pdf" class="btn btn-outline-light mr-5" target="_blank">View CV</a>
+                        <a href="doc/Mohammed Almurtada_Devops Engineer_ Malaysia.pdf" class="btn btn-outline-light mr-5" target="_blank">View CV</a>
                         <!-- <button type="button" class="btn-play" data-toggle="modal"
                             data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-target="#videoModal">
                             <span></span>
