update work list

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Mohammed Almurtada Sabr</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Master</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">9 Years</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+011 238 45008</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+6011 238 45008</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">devmurtadaelahdi@gmail.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">BTN Jln 18, kuala lumpur, MY</span></h6></div>
                     </div>
@@ -140,8 +140,27 @@
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Software Developer</h5>
-                            <p class="mb-2"><strong>Sam media</strong> | <small>2015 - present</small></p>
+                            <h5 class="font-weight-bold mb-1">Senior Software Developer</h5>
+                            <p class="mb-2"><strong>Ounch Ltd</strong> | <small>Aug 2023 - Present</small></p>
+                            <ul>
+                                <li>Handling backend operation, api integration.</li>
+                                <li>Spearheading the development and maintenance of the core application.</li>
+                                <li>Introducing new features and enhancing existing functionalities.</li>
+                                <li>Automating tasks to streamline processes.</li>
+                                <li>Designed and implemented REST APIs for Micro-service projects, enhancing
+                                    scalability and efficiency.</li>
+                                <li>Led the backend development for an insurance application project utilizing
+                                    CodeIgniter 4, alongside crafting the corresponding APIs using Node.js Express
+                                    framework and Prisma.</li>
+                                <li>Developed multiple REST APIs using Node.js Express.js and Prisma to serve as
+                                    integral services for two core projects within the company's portfolio</li>
+                                <li><b>Technologies:</b> PHP, NodeJs, ExpressJs, Docker, GIT, CodeIgniter 4</li>
+                            </ul>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Devops Engineer</h5>
+                            <p class="mb-2"><strong>Sam media</strong> | <small>2015 - Jul 2023</small></p>
                             <ul>
                                 <li>Handling backend operation, api integration</li>
                                 <li>Developing and maintaining the core application</li>
